[tool.poetry]
name = "demo-robyn-framework"
version = "0.1.0"
description = ""
authors = ["Nguyen2442 <elysionnguyen@gmail.com>"]
readme = "README.md"
packages = [{include = "demo_robyn_framework"}]

[tool.poetry.dependencies]
python = "^3.10"
robyn = "^0.24.1"
python-dotenv = "^0.21.1"
umongo = {extras = ["motor"], version = "^3.1.0"}
pydantic = "^1.10.4"
aioredis = "^2.0.1"
jinja2 = "^3.1.2"
strawberry-graphql = "^0.158.2"
redis = "^4.5.1"
celery = "^5.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
